--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,7 @@ SMTP_SERVER_PORT=567 # SMTP Server Port
 SMTP_USERNAME=you@gmail.com # SMTP Username
 SMTP_PASSWORD=password # SMTP Password
 EMAIL_FROM=You<you@gmail.com> # Send email from
+ENABLE_SMTPS=0 # Send mail without TLS
 
 LT_ROLE_ID=1234 # Role ID for the Leadership Team
 CORE_ROLE_ID=1234 # Role ID for the Core Team
