--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@
 #     - name: Deploy to server
 #       run: |
 #         ssh user@host << 'EOF'
-#         cd ~/muncord
+#         cd ~/acmcord
 #         git pull origin master
 #         docker compose down
 #         docker compose up -d --build
