Use mailgun api for sending mails.

--- a/.env.sample
+++ b/.env.sample
@@ -7,12 +7,16 @@ INVITE_TO_CHANNEL=1234 # Main channel where users will be invited to join the se
 
 DATABASE_URL=postgresql://username:password-url-encoded@localhost:5432/db_name # Database connection string
 
-SMTP_SEVER=smtp.gmail.com # SMTP Server Host
-SMTP_SERVER_PORT=567 # SMTP Server Port
-SMTP_USERNAME=you@gmail.com # SMTP Username
-SMTP_PASSWORD=password # SMTP Password
-EMAIL_FROM=You<you@gmail.com> # Send email from
-ENABLE_SMTPS=0 # Send mail without TLS
+# SMTP_SEVER=smtp.gmail.com # SMTP Server Host
+# SMTP_SERVER_PORT=567 # SMTP Server Port
+# SMTP_USERNAME=you@gmail.com # SMTP Username
+# SMTP_PASSWORD=password # SMTP Password
+# EMAIL_FROM=You<you@gmail.com> # Send email from
+# ENABLE_SMTPS=0 # Send mail without TLS
+
+DOMAIN=domain.com
+MG_API_KEY=abcd-1234
+MG_FROM=You<you@gmail.com>
 
 LT_ROLE_ID=1234 # Role ID for the Leadership Team
 CORE_ROLE_ID=1234 # Role ID for the Core Team
